force-app/main/default/objects/Payload_Log__c/Payload_Log__c.object-meta.xml
<CustomObject>
    <label>Payload Log</label>
    <nameField>
        <label>Payload Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payload Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>