force-app/main/default/objects/Payload_Log__c/fields/Incoming_Payload__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Payload__c</fullName>
    <label>Incoming Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>