force-app/main/default/objects/Payload_Log__c/fields/Outgoing_Payload__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Payload__c</fullName>
    <label>Outgoing Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>