force-app/main/default/objects/Payload_Log__c/fields/Remote_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Remote_Endpoint__c</fullName>
    <label>Remote Endpoint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>